fix: files loading errors

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>memex</title>
   <link rel="stylesheet" href="asset/style.css">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <script src="logic/lib/theme.js"></script>
 </head>
 <body>
@@ -26,7 +27,7 @@
   <div class="error"></div>
   <div class="lightbox"></div>
   <div class="page-overlay" id="overlay"></div>
-  
+
   <link rel="stylesheet" property="stylesheet" href="asset/fontawesome/css/all.css">
   <script src="logic/lib/imagesloaded.js"></script>
   <script src="logic/lib/masonry.js"></script>
