content: update the page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>memex</title>
+  <title>monsieurluge - notes</title>
   <link rel="stylesheet" href="asset/style.css">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <script src="logic/lib/theme.js"></script>
