theme: set the default theme to "solarized dark"

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <script>
-            let theme = new Theme();
+            let theme = new Theme({ b_high: '#fdf6e3', b_inv: '#cb4b16', b_low: '#002b36', b_med: '#eee8d5', background: '#073642', f_high: '#93a1a1', f_inv: '#002b36', f_low: '#586e75', f_med: '#6c71c4' });
             theme.install();
             theme.start();
         </script>
